--- a/src/Assets/style/main.scss
+++ b/src/Assets/style/main.scss
@@ -2,6 +2,7 @@
 @import './pages/Checkmail.scss';
 @import './pages/Verification.scss';
 @import './components/Navbar.scss';
+@import './pages/Homepage.scss';
 
 @import './abstracts/mixins.scss';
 
